Inserted \ifDraft ... \fi around material that should not be in final thesis.

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -118,7 +118,7 @@ statement) which when executed would result in a side effect but till that point
 
 The next two chapters are the literature review.
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -130,6 +130,6 @@ The next two chapters are the literature review.
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
