--- a/embedding.tex
+++ b/embedding.tex
@@ -165,7 +165,7 @@ non-linear pattern-matching with backtracking.
 Recapitulating, this chapter surveys the approach to embedding programming languages, especially \progLang{Prolog} in \progLang{Haskell}.
 Moreover, it describes tools, some of which are utilized in the prototype implementations.   
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -177,6 +177,6 @@ Moreover, it describes tools, some of which are utilized in the prototype implem
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
