--- a/futureScope.tex
+++ b/futureScope.tex
@@ -98,7 +98,7 @@ Recapitulating, this chapter provided us with points where this thesis could be 
 respective implementations.
 
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -110,5 +110,5 @@ respective implementations.
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 \end{document}
