--- a/introduction.tex
+++ b/introduction.tex
@@ -212,7 +212,7 @@ languages used in this thesis; \progLang{Haskell} and \progLang{Prolog}. Chapter
 glimpse of the future and we conclude with the Chapter~\ref{chap:conclusion}.
 
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -224,6 +224,6 @@ glimpse of the future and we conclude with the Chapter~\ref{chap:conclusion}.
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
