--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -184,7 +184,7 @@ predecessors \cite{website:alf,website:toy}.
 Recapitulating, this chapter surveys the approach to merging different programming paradigms to result in a hybrid programming language. Moreover, we talked about multi paradigm declarative languages along with \progLang{Prolog} and \progLang{Haskell} hybrids respectively.  
 
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -196,6 +196,6 @@ Recapitulating, this chapter surveys the approach to merging different programmi
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
