--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -80,9 +80,7 @@ language that takes advantages of neither paradigms.
 Mostly, the trend is towards the former.
 
 
-Here is a discussion of problems mentioned above that this thesis
-tackles.
-
+Here is a discussion of problems mentioned above that this thesis tackles.
 \begin{enumerate}
 \item The \languageConstruct{eDSL} supports \prologConstruct{fails} and \prologConstruct{cuts}.
 
