--- a/proto1.tex
+++ b/proto1.tex
@@ -516,7 +516,7 @@ Recapitulating, this chapter provides the ideas of language modification and mon
 implementations. 
 
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -528,6 +528,6 @@ implementations.
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
