--- a/proto2.tex
+++ b/proto2.tex
@@ -325,7 +325,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
 Recapitulating, this chapter provided an implementation of a \prologConstruct{Prolog}-like language adopted from \cite{prolog-lib} and
 incorporated a monadic unifier built from \cite{unification-fd-lib} to create a \progLang{Prolog} query resolver.
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -337,7 +337,7 @@ incorporated a monadic unifier built from \cite{unification-fd-lib} to create a 
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
 
