--- a/proto4.tex
+++ b/proto4.tex
@@ -197,7 +197,7 @@ two interpreter strategy
 
 \section{Chapter recapitulation}
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -209,6 +209,5 @@ two interpreter strategy
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
-
+\fi\fi
 \end{document}
