--- a/pwp.tex
+++ b/pwp.tex
@@ -308,7 +308,7 @@ trace for the query with the \prologConstruct{cut} operator.
 \section{Chapter recapitulation}
 Recapitulating, this chapter provided information on \progLang{Prolog} as a logic programming language.
 
-\ifMain
+\ifMain\ifDraft
 \begin{scope}
   \nolinenumbers
   \enotesize
@@ -320,6 +320,6 @@ Recapitulating, this chapter provided information on \progLang{Prolog} as a logi
   \end{singlespace}
 \end{scope}
 \unbcbibliography{bibliography}
-\fi
+\fi\fi
 
 \end{document}
