added content to section 8.4 Universal Horn Clauses in pwp.tex.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1556,6 +1556,21 @@ url = {https://www.haskell.org/}
   year={1990},
   publisher={Swedish Institute of Computer Science}
 }
+@incollection{bjorner2013solving,
+  title={On solving universally quantified horn clauses},
+  author={Bjorner, Nikolaj and McMillan, Ken and Rybalchenko, Andrey},
+  booktitle={Static Analysis},
+  pages={105--125},
+  year={2013},
+  publisher={Springer}
+}
+@misc{website:hornclauseprolog,
+title = {Horn Clauses},
+author = {learn Prolog Now},
+month = {},
+year = {},
+url = {http://www.learnprolognow.org/slides/official/Horn.pdf}
+}
 @comment{website:,
 title = ,
 author = ,
