--- a/proto4.tex
+++ b/proto4.tex
@@ -193,7 +193,6 @@ For termination we use \haskellClass{NoResult}.
 
 \begin{code-list}[H]
 \begin{singlespace}
-
   \inputminted[linenos, firstline=7, lastline=16]{haskell}{haskell-proto4-platen-winkel.hs}
 \end{singlespace}
 \caption{\progLang{Prolog}-like language with \languageConstruct{IO} constructors}
@@ -204,6 +203,17 @@ For termination we use \haskellClass{NoResult}.
 two interpreter strategy
 1. pure
 2. in IO Monad
+
+Figure~\ref{fig:proto4architecture} shows architecture for prototype 4.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{proto4_architecture.png}
+%\vspace*{1cm}
+  \caption{Prototype 4 architecture}
+  \label{fig:proto4architecture}
+\end{figure}
+
 
 
 \section{Chapter recapitulation}
