Added content to section 8.6 in pwp.tex.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1571,6 +1571,14 @@ month = {},
 year = {},
 url = {http://www.learnprolognow.org/slides/official/Horn.pdf}
 }
+@incollection{ohwada1987managing,
+  title={Managing search in parallel logic programming},
+  author={Ohwada, Hayato and Mizoguchi, Fumio},
+  booktitle={Logic Programming'87},
+  pages={148--177},
+  year={1987},
+  publisher={Springer}
+}
 @comment{website:,
 title = ,
 author = ,
