--- a/hwh.tex
+++ b/hwh.tex
@@ -148,10 +148,9 @@ Consider the infinite list example:
 results in:
 \mint{haskell}|1 : 1 : 1 . . . |
 
-Lazy evaluation is part of operational semantics, i.e.
-how a \progLang{Haskell} program is evaluated.
-This semantics allows one to bypass undefined values (e.g.
-results of infinite loops) and in this way it also allows one to process formally infinite data.
+Lazy evaluation is part of operational semantics, i.e., how a \progLang{Haskell} program is evaluated.
+This semantics allows one to bypass undefined values (e.g., results of infinite loops) and in this way it also
+allows one to process formally infinite data.
 
 \section{Quasiquotation and \progLang{Haskell}}\label{hwh:quasiquotationandhaskell}
 \subsection{Quasiquotation}
