--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -51,8 +51,7 @@ reason is that this approach fails to identify the essence of a language.
 \subsection{Functional logic programming languages}
 
 Continuing from the previous section, we narrow down the scope by considering only multi paradigm declarative
-languages, i.e.
-functional logical programming languages.
+languages, i.e., functional logical programming languages.
 By doing so a large amount of information pops up, from articles that give brief descriptions
 \cite{website:wikiflpl, website:wikiflpllist} to articles that provide implementation techniques (for instance
 \cite{website:imlpementingflpl}, which also gives an overview of implementing functional logic languages and a list
