--- a/proto3.tex
+++ b/proto3.tex
@@ -37,9 +37,8 @@ The main components are as follows:
 
 The main highlight of this implementation is the fact that the query resolver can work with multiple search
 strategies decided at runtime.
-A query request will consist of the query itself i.e.
-the terms to be unified, a knowledge base storing the clauses, the unification procedure and finally a user
-provided search strategy.
+A query request will consist of the query itself i.e., the terms to be unified, a knowledge base storing the
+clauses, the unification procedure and finally a user provided search strategy.
 
 
 \begin{figure}[H]
