--- a/pwp.tex
+++ b/pwp.tex
@@ -23,8 +23,7 @@ result.
 The relation between them is defined by clauses using \textit{Horn Clauses} \cite{wikiprolog}.
 \progLang{Prolog} is very popular and has a number of implementations
 \cite{website:comparisonofprologimplementationswiki} for different purposes.
-\progLang{Prolog} comes from the same family as \progLang{Haskell} i.e.
-the declarative paradigm.
+\progLang{Prolog} comes from the same family as \progLang{Haskell} i.e., the declarative paradigm.
 One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language
 are from the same paradigm.
 This provides a platform to play around with the conflicting characteristics of the two languages.
