2 fixes to bibliography.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -479,11 +479,11 @@ note={\url{http://hackage.haskell.org/package/liquid-fixpoint}}
   year={2006},
   organization={ACM}
 }
-@article{ait1999warren,
-  title={Warren's Abstract Machine A TUTORIAL RECONSTRUCTION},
-  author={A{\"\i}t-Kaci, Hassan and Des Flambertins, For{\^e}t},
-  year={1999},
-  publisher={Citeseer}
+@book{ait1999warren,
+  title={Warren's Abstract Machine: A Tutorial Reconstruction},
+  author={A{\"\i}t-Kaci, Hassan},
+  year={1991},
+  publisher={MIT Press}
 }
 @misc{castorc++,
 author="MPprogramming.com",
@@ -1490,7 +1490,7 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
   author={Machado, Ricardo J and Maciel, Rita Suzana P and Rubin, Julia and Botterweck, Goetz},
   publisher={Springer}
 }
-@msic{website:stmonadwiki,
+@misc{website:stmonadwiki,
 title = {ST Monad},
 author = {Haskell Wiki},
 month = {July},
