Fixed an error introduced in introduction.tex .

--- a/introduction.tex
+++ b/introduction.tex
@@ -45,7 +45,7 @@ This results in a hybrid approach which provides a library taking advantage of t
 
 \section{Thesis statement}
 
-%The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
+The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and
 \progLang{Prolog} by embedding the latter into the former and analyzing the result of doing so as they have
 conflicting characteristics.
 The finished product will be something like a \textit{haskellised} \progLang{Prolog} which has logical programming
