minor fix in pwp.tex .

--- a/pwp.tex
+++ b/pwp.tex
@@ -154,8 +154,7 @@ $[c \vee \neg a \vee \neg b] \wedge a \wedge b$
 
 \section{Unification}
 
-To replicate \progLang{Prolog} we look into how it works \enparen{see, for instance,
-      \textup{\cite{webiste:learnprolognow}}}.
+To replicate \progLang{Prolog} we look into how it works (see, for instance, \cite{webiste:learnprolognow}).
 %
 As any other language we start with the syntax and semantics.
 We begin with the programming constructs of the language.
