cleaned up nocite .

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -153,110 +153,38 @@
     % I use a file for every section.  Each of these corresponds to a file
     % with the specified name ending in '.tex' (e.g., introduction.tex).
     %
-
-   \nocite{claessen2000typed,
+   
+    %% 2016-02-22.  the following citations are referenced nowhere
+    %% in the thesis.  They should probably be removed or referenced.
+   \nocite{Augustsson98cayenne--,
+   audklangembedd,
+   barzilay2004foreign,
+   benton2005embedded,
+   castorc++,
    chin2003type,
-   hinze1998prological,
-   spivey2000functional,
-   erwig2004escape,
-   spivey1999embedding,
-   seres1999algebra,
-   seres2001algebra,
-   seres2000optimisation,
-   seres2001higher,
-   spivey1999algebra,
-   hoare1998unifying,
-   gibbons2013unifying,
-   friedman05reasoned,
-   krishnamurthi2007programming,
-   website:lambda-the-ultimate,
+   csp-lib,
+   cspm-To-prolog-graph-lib,
+   gnuprolog,
+   hudak1996building,
+   lang2001embedding,
+   liquid-fix-point-lib,
+   logic-classes-lib,peg-lib,
+   logict2-lib,
+   monadiccp-gecode-lib,
+   monadiccp-lib,
+   pinto2003dot,
+   prolog-graph-lib-lib,
+   quintusprolog,
+   ramsey2003embedding,
+   reppy2006application,
+   ummlisp,
+   website:haskell-choice,
+   website:haskellwiki,
    website:lambda-the-ultimate-2,
    website:lambda-the-ultimate-3,
-   website:takashi-workplace,
-   website:mini-prolog-hugs98,
-   website:logic-programming-haskell,
    website:stackoverflow,
-   website:haskell-choice,
-   website:prolog-steam,
-   website:prolog-death,
-   website:prolog-killer,
-   somogyi1995logic,
-   nanoprolog-lib,
-   prolog-lib,
-   cspm-To-Prolog-lib,
-   prolog-graph-lib,
-   prolog-graph-lib-lib,
-   hswip-lib,
-   logict-lib,
-   logict2-lib,
-   logic-classes-lib,proplogic-lib,
-   cflp-lib,
-   logic-grows-on-trees-lib,
-   unification-fd-lib,
-   cmu-lib,
-   peg-lib,
-   monadiccp-lib,
-   monadiccp-gecode-lib,
-   csp-lib,
-   liquid-fix-point-lib,
-   ramsey2003embedding,
-   hudak1996building,
-   benton2005embedded,
-   Augustsson98cayenne--,
-   barzilay2004foreign,
-   pinto2003dot,
-   reppy2006application,
-   ait1999warren,
-   castorc++,
-   gnuprolog,
-   jlog,
-   jscriptlog,
-   lang2001embedding,
-   audklangembedd,
-   swipembedd,
-   quintusprolog,
-   yieldprolog,
-   komorowski1982qlog,
-   robinson1982loglisp,
-   robinson1980loglisp,
-   ummlisp,
-   racklog}
-
-
-
-   \nocite{DBLP:conf/utp/2006,
-   DBLP:conf/utp/2008,
-   DBLP:conf/utp/2010,
-   DBLP:conf/utp/2012,
-   wikiquasi,
-   haskellquasi,
-   hughes1989functional,
-   spivey1995introduction,
-   Krishnamurthi:2008:TPL:1480828.1480846,
-   wadler1992comprehending,
-   website:logicprogexamplehaskell,
-   wikiprolog,
-   website:scala,
-   website:virgil,
-   website:closwiki,
-   website:mercury,
-   website:curry,
-   lloyd1999programming:escher,
-   website:alf,
-   website:babel,
-   moreno1992logic,
-   moreno1988babel,
-   website:ciao,
-   website:life,
-   bert1987lpg,
-   website:nue-prolog,
-   website:oz-mozart,
-   website:oz-mozart,
-   website:toy,
-   website:lambda-prolog,
-   website:visual-prolog,
-%   website:tablog,               %% FIXME !
-   website:haskellwiki}
+   website:visual-prolog}
+    
    \subfile{introduction}
    \clearpage	
    
